# schola

./: .gitignore  README.md  code2text.py  package.json
contracts/counter/: Cargo.toml
contracts/factory/: Cargo.toml
contracts/factory/src/: lib.rs
frontend/_posts/: code-previews.md  dynamic-routing.md  intro.md  mvp.md  preview.md
frontend/src/app/: layout.tsx
frontend/src/app/_components/: alert.tsx  header.tsx  intro.tsx  more-stories.tsx
frontend/src/app/posts/[slug]/: page.tsx
