[package]
name = "schola-trivia-factory"
version = "0.1.0"
authors = ["Your Name"]
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", tag = "v1.1.1", features = [
    "debug",
] }
codec = { package = "parity-scale-codec", version = "3.6", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.9", default-features = false, features = [
    "derive",
] }
gmeta = { git = "https://github.com/gear-tech/gear.git", tag = "v1.1.1" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", tag = "v1.1.1" }
